--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <!--Tags para SEO-->
+    <!--Tags SEO-->
     <meta name="description" content="Programming website for Tec industry">
     <meta name="keywords" content="technology, website, programming, host">
     <meta name="author" content="Cauã Cavalcante">
@@ -68,5 +68,57 @@
             <img src="img/mockup2.png"/>
         </div><!--container-->
     </section><!--section2-->
+    <section class="section3">
+        <div class="part1">
+            <div class="wraper-part1">
+                <h2>Our team</h2>
+                <p>Laborum laboris veniam aute pariatur ad aliquip voluptate veniam ex irure magna nisi consequat. Qui est esse ea ut ullamco nulla excepteur ut in enim sit. Enim ex ipsum ea minim fugiat cupidatat elit enim aliquip anim. Velit exercitation excepteur officia eu dolore non pariatur nostrud deserunt proident.</p>
+            </div><!--wraper-part1-->
+        </div><!--part1-->
+        <div class="part2">
+            <div class="about-aut">
+                <div class="title-aut">
+                    <div class="wraper-title-aut">
+                        <h2>Cauã Cavalcante</h2>
+                        <p>Developer | Co-Founder</p>
+                    </div><!--wraper-title-aut-->
+                    <div class="img-aut"></div>
+                </div><!--title-aut-->
+                <div class="text-aut">
+                    <p>Occaecat aliqua adipisicing amet et aute aliquip. Cillum consectetur ut cupidatat excepteur esse veniam nostrud ad sunt proident occaecat eu sunt. Aliqua deserunt in aliquip enim sit.</p>
+                </div><!--text-aut-->
+            </div><!--about-aut-->
+            <div class="slider-bullets">
+                <span style="background-color: rgb(105, 105, 105);"></span>
+                <span></span>
+                <span></span>
+            </div><!--slider-bullets-->
+        </div><!--part2-->
+        <div class="clear"></div>
+    </section><!--section3-->
+    <section class="section4">
+        <div class="container">
+            <div class="form">
+                <h2>Contact Us</h2>
+                <p>Ipsum esse deserunt occaecat exercitation labore est anim mollit dolor nisi fugiat tempor. Consequat fugiat fugiat ea est minim non. Laborum consectetur est laborum occaecat laborum reprehenderit amet. Lorem voluptate aliqua adipisicing proident eu elit magna ad id voluptate labore cupidatat non ut.</p>
+                <form>
+                    <input type="text" name="name" placeholder="Name">
+                    <input type="text" name="email" placeholder="Email">
+                    <textarea name="message" placeholder="Enter your message ..."></textarea>
+                    <div class="clear"></div>
+                    <div><input type="submit" value="Submit"></div>
+                </form>
+            </div><!--form-->
+            <div class="map-wraper">
+                <h2>Our Location</h2>
+                <div class="map-wraper3">
+                    <div class="map-wraper2">
+                        <div id="map" class="map"></div><!--map-->
+                    </div><!--map-wraper2-->
+                </div><!--map-wraper3-->
+            </div><!--map-wraper-->
+            <div class="clear"></div>
+        </div><!--container-->
+    </section><!--section4-->
 </body>
 </html>
