--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <title>Programme</title>
 </head>
 <body>
@@ -28,8 +28,8 @@
                     <li><a href="">contact</a></li>
                 </ul>
             </nav>
-            <nav class="mobile-menu">
-                <ul>
+            <nav class="mobile-menu" onclick="hideElement()">
+                <ul id="mobMenu">
                     <li><a href="">Home</a></li>
                     <li><a href="">Services</a></li>
                     <li><a href="">About us</a></li>
@@ -113,12 +113,20 @@
                 <h2>Our Location</h2>
                 <div class="map-wraper3">
                     <div class="map-wraper2">
-                        <div id="map" class="map"></div><!--map-->
+                        <!--Google Maps Integration-->
+                        <iframe class="map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=E%2020th%20St%20New%20York+(My%20Map)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                     </div><!--map-wraper2-->
                 </div><!--map-wraper3-->
             </div><!--map-wraper-->
             <div class="clear"></div>
         </div><!--container-->
     </section><!--section4-->
+    <footer>
+        <div class="container">
+            <p>All Rights Reserved. © 2023 Cauã Cavalcante</p>
+            <p>caua.cavalcante@outlook.com</p>
+            <div class="clear"></div>
+        </div><!--container-->
+    </footer>
 </body>
 </html>
