New simple mobile menu using JQuery

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="script.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
     <title>Programme</title>
 </head>
 <body>
@@ -28,8 +29,8 @@
                     <li><a href="">contact</a></li>
                 </ul>
             </nav>
-            <nav class="mobile-menu" onclick="hideElement()">
-                <ul id="mobMenu">
+            <nav class="mobile-menu">
+                <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Services</a></li>
                     <li><a href="">About us</a></li>
