Update: Added favicon, some fixes
- Added favicon using our own logo;
- Fixes for smaller phones;
- Fixes regarding last update (navigation menus).

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Programming website for Tec industry">
     <meta name="keywords" content="technology, website, programming, host">
     <meta name="author" content="Cauã Cavalcante">
+    <title>Programme</title>
+    <link rel="icon" type="immage/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +17,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/menu-mobile.js"></script>
     <script src="js/dinamic-scrollbar.js"></script>
-    <title>Programme</title>
 </head>
 <body>
     <header id="home">
