Adding slider function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/menu-mobile.js"></script>
     <script src="js/dinamic-scrollbar.js"></script>
+    <script src="js/slider-team.js"></script>
 </head>
 <body>
     <header id="home">
@@ -79,23 +80,47 @@
             </div><!--wraper-part1-->
         </div><!--part1-->
         <div class="part2">
-            <div class="about-aut">
-                <div class="title-aut">
-                    <div class="wraper-title-aut">
-                        <h2>Cauã Cavalcante</h2>
-                        <p>Developer | Co-Founder</p>
-                    </div><!--wraper-title-aut-->
-                    <div class="img-aut"></div>
-                </div><!--title-aut-->
-                <div class="text-aut">
-                    <p>Occaecat aliqua adipisicing amet et aute aliquip. Cillum consectetur ut cupidatat excepteur esse veniam nostrud ad sunt proident occaecat eu sunt. Aliqua deserunt in aliquip enim sit.</p>
-                </div><!--text-aut-->
-            </div><!--about-aut-->
-            <div class="slider-bullets">
-                <span style="background-color: rgb(105, 105, 105);"></span>
-                <span></span>
-                <span></span>
-            </div><!--slider-bullets-->
+            <div class="scrollTeam">
+                <div class="scroll-wraper">
+                    <div class="about-aut">
+                        <div class="title-aut">
+                            <div class="wraper-title-aut">
+                                <h2>Cauã Cavalcante</h2>
+                                <p>Developer | Co-Founder</p>
+                            </div><!--wraper-title-aut-->
+                            <div class="img-aut"></div>
+                        </div><!--title-aut-->
+                        <div class="text-aut">
+                            <p>Occaecat aliqua adipisicing amet et aute aliquip. Cillum consectetur ut cupidatat excepteur esse veniam nostrud ad sunt proident occaecat eu sunt. Aliqua deserunt in aliquip enim sit.</p>
+                        </div><!--text-aut-->
+                    </div><!--about-aut-->
+                    <div class="about-aut">
+                        <div class="title-aut">
+                            <div class="wraper-title-aut">
+                                <h2>Cauã Cavalcante</h2>
+                                <p>Developer | Co-Founder</p>
+                            </div><!--wraper-title-aut-->
+                            <div class="img-aut"></div>
+                        </div><!--title-aut-->
+                        <div class="text-aut">
+                            <p>Occaecat aliqua adipisicing amet et aute aliquip. Cillum consectetur ut cupidatat excepteur esse veniam nostrud ad sunt proident occaecat eu sunt. Aliqua deserunt in aliquip enim sit.</p>
+                        </div><!--text-aut-->
+                    </div><!--about-aut-->
+                    <div class="about-aut">
+                        <div class="title-aut">
+                            <div class="wraper-title-aut">
+                                <h2>Cauã Cavalcante</h2>
+                                <p>Developer | Co-Founder</p>
+                            </div><!--wraper-title-aut-->
+                            <div class="img-aut"></div>
+                        </div><!--title-aut-->
+                        <div class="text-aut">
+                            <p>Occaecat aliqua adipisicing amet et aute aliquip. Cillum consectetur ut cupidatat excepteur esse veniam nostrud ad sunt proident occaecat eu sunt. Aliqua deserunt in aliquip enim sit.</p>
+                        </div><!--text-aut-->
+                    </div><!--about-aut-->
+                </div><!--scroll-wraper-->
+            </div><!--scrollTeam-->
+            <div class="slider-bullets"></div><!--slider-bullets-->
         </div><!--part2-->
         <div class="clear"></div>
     </section><!--section3-->
